src/tests/fixtures/comments/lineCommentWrongCasing.invalid.ts.expected
-----------------
INPUT
----------------- 
// @GQLtYPE
export default class Composer {
  // @gqlfield
  url(): string {
    return `/composer/`;
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/comments/lineCommentWrongCasing.invalid.ts:1:4 - error: `@GQLtYPE` is not a valid Grats tag. Valid tags are: `@gqlType`, `@gqlField`, `@gqlScalar`, `@gqlInterface`, `@gqlEnum`, `@gqlUnion`, `@gqlInput`.

1 // @GQLtYPE
     ~~~~~~~~
src/tests/fixtures/comments/lineCommentWrongCasing.invalid.ts:1:4 - error: Unexpected Grats tag in line comment. Grats only supports GraphQL tags in JSDoc-style block comments. e.g. `/** @gqlType */`

1 // @GQLtYPE
     ~~~~~~~~
src/tests/fixtures/comments/lineCommentWrongCasing.invalid.ts:3:6 - error: `@gqlfield` is not a valid Grats tag. Valid tags are: `@gqlType`, `@gqlField`, `@gqlScalar`, `@gqlInterface`, `@gqlEnum`, `@gqlUnion`, `@gqlInput`.

3   // @gqlfield
       ~~~~~~~~~
src/tests/fixtures/comments/lineCommentWrongCasing.invalid.ts:3:6 - error: Unexpected Grats tag in line comment. Grats only supports GraphQL tags in JSDoc-style block comments. e.g. `/** @gqlType */`

3   // @gqlfield
       ~~~~~~~~~
